# Cellular-Automa-proftaak2019

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main-old.cpp
dependencies/IMGUI/: CMakeLists.txt
docs/: Checklist.xlsx  Class diagram.vsdx  Functioneel Ontwerp.docx  Installatie Document.docx  Planning.xlsx  Programma van Eisen.docx  Project Plan.docx  Technisch ontwerp.docx
src/: cell.cpp  cell.h  config.cpp  config.h  coordinateType.h  gielmain.cpp  grid.cpp  grid.h  homepage.cpp  homepage.h  loadPage.h  main.cpp  page.cpp  page.h  premadeBlock.cpp  premadeBlock.h  resources.h  shader.cpp  shader.h  simulatorPage.cpp  simulatorPage.h  world.cpp  world.h
src/shaders/: basicVertexShader.glsl  gridCellFragmentShader.glsl  gridCellVertexShader.glsl  gridLineVertexShader.glsl  gridVertexShader.glsl
